Fixed margins on mobile

--- a/styles/services.css
+++ b/styles/services.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     margin: 140px 0 0 0;
-    padding: 7px; /* this */
+    padding: 7px; 
 }
 
 .services__box {
@@ -25,10 +25,6 @@
     text-align: center;
     margin: 7px;
 }
-
-/* .services__box:not(:last-child) {
-    margin-right: 15px;
-} */
 
 .services__text {
     margin: 10px 0 20px 0;
@@ -45,5 +41,6 @@
 @media (max-width: 480px) {
     .services__features {
         flex-direction: column;
+        margin: 70px 0 0 0;
     }
 }
